# assistant-ops

./: .gitignore  README.md  assistant_setup_design.md  production_architecture.md  pyproject.toml
docs/: DEPLOYMENT.md  DEVELOPMENT.md  GOOGLE_INTEGRATION_PLAN.md  GOOGLE_SETUP.md
src/assistant_ops/: __init__.py  adapters.py  approvals.py  audit.py  bootstrap.py  cibc_login_parser.py  cibc_parser.py  cibc_session.py  config.py  credentials.py  google_auth.py  google_client.py  integrations.py  main.py  models.py  playwright_runner.py  policy.py  server.py  services.py  tls.py
tests/: test_approvals.py  test_cibc_parser.py  test_cibc_session.py  test_config.py  test_google_auth.py  test_google_client.py  test_google_providers.py  test_integrations.py  test_policy.py  test_server.py  test_services.py  test_tls.py
